--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
     "@ai-sdk/openai": "^3.0.30",
     "@prisma/client": "^5.10.0",
     "ai": "^6.0.97",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
